# lily-contribs

./: NIFFDUM2.C  NOTES  README  TODO  common.in  configure  niff2ly.c  niffsdk.txt
lily/: xly_backend.c  (+9 more)
niff-1.02/niffsdk1.02/: NIFFSDK  README  configure  configure.in
niff-1.02/niffsdk1.02/doc/htm/: niffsdk.htm  snapshot.htm
niff-1.02/niffsdk1.02/doc/man/: niffsdk.man  snapshot.man
niff-1.02/niffsdk1.02/doc/pod/: niffsdk.pod  snapshot.pod
niff-1.02/niffsdk1.02/doc/txt/: Makefile  niffsdk.txt  snapshot.txt
niff-1.02/niffsdk1.02/mk/: top.in  top.mk
niff-1.02/niffsdk1.02/niff/: MANIFEST  NIFF  configure  configure.in
niff-1.02/niffsdk1.02/niff/mk/: lib.mk  mkdep.in  top.in
niff-1.02/niffsdk1.02/niffio/: Makefile.in  configure
niff-1.02/niffsdk1.02/niffio/include/: Makefile  niffio.h
niff-1.02/niffsdk1.02/niffio/mk/: doc.mk
niff-1.02/niffsdk1.02/niffio/test/: t_nif001.can  tests
niff-1.02/niffsdk1.02/riffio/: Makefile.in  RIFFIO  configure
niff-1.02/niffsdk1.02/riffio/include/: stdcriff.h
niff-1.02/niffsdk1.02/riffio/mk/: bin.mk
niff-1.02/niffsdk1.02/riffio/test/: Makefile  check  t_abcde  t_abcde.can  test.can
niffsdk1.02/niffio/: MANIFEST  NIFFIO  configure.in  local.in
niffsdk1.02/niffio/doc/htm/: nfile.htm  niffdump.htm  rwniff.htm  stbl.htm  storenif.htm
niffsdk1.02/niffio/doc/man/: names.man  nif001.man  storenif.man
niffsdk1.02/niffio/doc/pod/: rwniff.pod  rwtypes.pod  store.pod  storenif.pod
niffsdk1.02/niffio/doc/txt/: inherit.txt  parse.txt  rwtypes.txt  stbl.txt
niffsdk1.02/niffio/test/: Makefile  t_nif001  test.can
niffsdk1.02/riffio/: MANIFEST  configure.in  local.mk
niffsdk1.02/riffio/include/: Makefile
niffsdk1.02/riffio/mk/: pkg.mk
niffsdk1.02/riffio/test/: tests
(+552 files in other folders)
